<resources>
    <string name="app_name">Fiche bilan des interventions</string>
    <string name="oui">oui</string>
    <string name="non">non</string>

    <string name="hemorragie">Hémorragie</string>
    <string name="ventilation">Ventilation</string>
    <string name="pouls_carotidien">Pouls carotidien</string>
    <string name="conscience">Conscience</string>
    <string name="parole">Parole</string>
    <string name="desoriente">Désorienté</string>
    <string name="somnolence">Somnolence</string>
    <string name="agitation">Agitation</string>
    <string name="pci">PCI</string>
    <string name="si_pci">Si PCI</string>
    <string name="duree">Durée :</string>

    <string name="reaction">Réaction</string>
    <string name="ouvrir_yeux">Ouvre les yeux</string>
    <string name="pupilles">Pupilles\nsymétriques</string>
    <string name="bouge_jambes">Bouge\nles jambes</string>
    <string name="bouge_bras">Bouge\nles bras</string>
    <string name="seul">seul</string>
    <string name="ordre">ordre</string>

    <string name="sensibilite">Sensibilité</string>
    <string name="pincement">Pincement perçu</string>
    <string name="sensibilite_main">Dos des mains</string>
    <string name="sensibilite_jambes">Jambes</string>

    <string name="libelle_saisie">Taper ici pour écrire...</string>

    <string name="frequence">Fréquence\n(/min) :</string>
    <string name="reguliere">Regulière</string>
    <string name="sens_etouffe">Sensation étouffement</string>
    <string name="siffle">Sifflement, râles et gargouillements</string>
    <string name="sueur">Sueur</string>
    <string name="cyanose">Cyanose</string>
    <string name="sp">SP O² :</string>
    <string name="pourcent">%</string>
    <string name="air">Air ambiant</string>
    <string name="oxygene">O²</string>

    <string name="cardio_circulatoire">Cardio-circulatoire</string>
    <string name="pouls">Pouls radial</string>
    <string name="paleur">Pâleur</string>
    <string name="auto_ta">AUTO TA :</string>

    <string name="traumatique">Traumatique</string>
    <string name="geste_secouriste">Gestes secouristes</string>

    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="ddn">Date de naissance :</string>
    <string name="sexe">Sexe</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Féminin</string>
    <string name="adresse">Adresse :</string>
    <string name="cp">Code postal :</string>
    <string name="ville">Ville :</string>

    <string name="heure">Heure :</string>
    <string name="divers">Divers :</string>
    <string name="evacuation">Évacuation vers :</string>
    <string name="par">Par :</string>
    <string name="vsav">VSAV</string>
    <string name="ambulance_privee">Ambulance privée</string>
    <string name="helicoptere">Hélicoptère</string>
    <string name="autre">Autre</string>
    <string name="medicalisee">Médicalisée</string>
    <string name="avec">Avec</string>
    <string name="sssm">SSSM</string>
    <string name="smur">SMUR</string>
    <string name="medecin_traitant">Médecin traitant</string>
    <string name="intubation">Intubation</string>
    <string name="glasgow">Glasgow</string>
    <string name="perfusion">Perfusion</string>
    <string name="evolution">Évolution :</string>
    <string name="aggravation">Aggravation</string>
    <string name="stationnaire">Stationnaire</string>
    <string name="amelioration">Amélioration</string>
    <string name="refus_transport">Refus de transport</string>
    <string name="deces">Décès</string>

    <string name="heure_inital">Heure du\nbilan initial :</string>
    <string name="date">Date :</string>
    <string name="num_intervention">Numéro\ndlintervention :</string>
    <string name="cs">Centre de\nsecours :</string>
    <string name="adresse_intervention">Adresse de\nlintervention :</string>
    <string name="chef_agres">Chef dAgrès :</string>
    <string name="signature">Signature:</string>

    <string name="validation">Valider la\nfiche bilan</string>

    <string name="heure_incident">Heure présumée\nde l\'incident :</string>
    <string name="lieu">Lieu :</string>
    <string name="vie_privee">Vie privée</string>
    <string name="travail">Travail</string>
    <string name="voie_publique">Voie\npublique</string>
    <string name="sport">Sport</string>
    <string name="type">Type :</string>
    <string name="precision">Précision :</string>
    <string name="si_accident">Si accident de la voie publique</string>
    <string name="blesse">Le blessé :</string>
    <string name="contre">Contre :</string>
    <string name="pieton">Piéton</string>
    <string name="auto">Auto</string>
    <string name="vehicule_agricole">Véhicule agricole</string>
    <string name="cycliste">Cycliste</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="moto">Moto</string>
    <string name="poids_lourd">Poids lourd</string>
    <string name="mur">Mur</string>
    <string name="arbre">Arbre</string>
    <string name="Si_conducteur_blesse">Si conducteur blessé</string>
    <string name="hors_vehicule">Hors véhicule</string>
    <string name="dans_vehicule">Dans véhicule</string>

    <string name="immobilisation">Immobilisation</string>
    <string name="rcp">RCP</string>
    <string name="dsa">DSA</string>
    <string name="collier_cervical">Collier cervical</string>
    <string name="attelle">Attelle</string>
    <string name="gel_eau">Gel d\'eau</string>
    <string name="demi_assis">Demi assis</string>
    <string name="plat_dos">Plat dos</string>
    <string name="pls">PLS</string>
    <string name="duree_rcp">Durée RCP</string>
    <string name="debit_oxygene">Débit oxygène</string>

</resources>