<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BilanComplementaireGesteActivity"
        android:background="@android:color/white">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="920dp"
            android:layout_height="460dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/ll_bilan_complementaire">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ll_rectangle_bords_hauts_ronds"
                android:id="@+id/ll_position">
            <TextView
                    android:text="@string/geste_secouriste"
                    android:id="@+id/tv_geste_secouriste"
                    style="@style/tv_titre"
                    android:background="@drawable/txt_rectangle_bords_hauts_ronds"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rl_geste_secouriste_suite"
                    android:orientation="horizontal"
                    style="@style/rl_marge">
                <CheckBox
                        android:text="@string/immobilisation"
                        android:id="@+id/cb_immobilisation"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/demi_assis"
                        android:id="@+id/cb_demi_assis"
                        android:layout_toEndOf="@+id/cb_immobilisation"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/plat_dos"
                        android:id="@+id/cb_plat_dos"
                        android:layout_toEndOf="@+id/cb_demi_assis"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/pls"
                        android:id="@+id/cb_pls"
                        android:layout_toEndOf="@+id/cb_plat_dos"
                        style="@style/cb_normal"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rl_materiel"
                    android:orientation="horizontal"
                    style="@style/rl_marge">
                <CheckBox
                        android:text="@string/gel_eau"
                        android:id="@+id/cb_gel_eau"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/ventilation"
                        android:id="@+id/cb_ventilation"
                        android:layout_toEndOf="@+id/cb_gel_eau"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/collier_cervical"
                        android:id="@+id/cb_collier_cervical"
                        android:layout_toEndOf="@+id/cb_ventilation"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/attelle"
                        android:id="@+id/cb_attelle"
                        android:layout_toEndOf="@+id/cb_collier_cervical"
                        style="@style/cb_normal"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rl_rcp"
                    android:orientation="horizontal"
                    style="@style/rl_marge">
                <CheckBox
                        android:text="@string/rcp"
                        android:id="@+id/cb_rcp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        style="@style/cb_normal"/>
                <CheckBox
                        android:text="@string/dsa"
                        android:id="@+id/cb_dsa"
                        android:layout_toEndOf="@+id/cb_rcp"
                        style="@style/cb_normal"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rl_rcp_debit_duree"
                    android:orientation="horizontal"
                    style="@style/rl_marge">
                <TextView
                        android:id="@+id/tv_debit"
                        android:text="@string/debit_oxygene"
                        style="@style/tv_libelle_centre"/>
                <EditText
                        android:layout_toEndOf="@+id/tv_debit"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/et_debit"
                        style="@style/et_normal"/>
                <TextView
                        android:id="@+id/tv_duree"
                        android:text="@string/duree_rcp"
                        android:layout_toEndOf="@+id/et_debit"
                        android:layout_alignParentLeft="false"
                        style="@style/tv_libelle_centre"/>
                <EditText
                        android:layout_toEndOf="@+id/tv_duree"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/et_duree"
                        style="@style/et_normal"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>