<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IndentificationVictimeActivity"
        android:background="@android:color/white">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="920dp"
            android:layout_height="565dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/ll_detresse_vitale_respiratoire"
            android:background="@drawable/ll_rectangle_bords_hauts_ronds">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:id="@+id/rl_nom"
                android:orientation="horizontal"
                style="@style/rl_marge">
            <TextView
                    android:id="@+id/tv_nom"
                    android:text="@string/nom"
                    style="@style/tv_libelle_centre"/>
            <EditText
                    android:layout_toEndOf="@+id/tv_nom"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/et_nom"
                    style="@style/et_normal"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:id="@+id/rl_prenom"
                android:orientation="horizontal"
                style="@style/rl_marge">
            <TextView
                    android:id="@+id/tv_prenom"
                    android:text="@string/prenom"
                    style="@style/tv_libelle_centre"/>
            <EditText
                    android:layout_toEndOf="@+id/tv_prenom"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/et_prenom"
                    style="@style/et_normal"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:id="@+id/rl_ddn"
                android:orientation="horizontal"
                style="@style/rl_marge">
            <TextView
                    android:id="@+id/tv_ddn"
                    android:text="@string/ddn"
                    style="@style/tv_libelle_centre"/>
            <EditText
                    android:layout_toEndOf="@+id/tv_ddn"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/et_ddn"
                    style="@style/et_normal"/>
            <TextView
                    android:id="@+id/tv_sexe"
                    android:text="@string/sexe"
                    android:layout_toEndOf="@+id/et_ddn"
                    android:layout_alignParentLeft="false"
                    style="@style/tv_libelle_centre"/>
            <RadioGroup
                    android:layout_toEndOf="@+id/tv_sexe"
                    android:id="@+id/rg_sp"
                    style="@style/rg_normal">
                <RadioButton
                        android:text="@string/masculin"
                        android:id="@+id/rb_masculin"
                        style="@style/rb_normal"/>
                <RadioButton
                        android:text="@string/feminin"
                        android:id="@+id/rb_feminin"
                        style="@style/rb_normal"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:id="@+id/rl_adresse"
                android:orientation="horizontal"
                style="@style/rl_marge">
            <TextView
                    android:id="@+id/tv_adresse"
                    android:text="@string/adresse"
                    style="@style/tv_libelle_centre"/>
            <EditText
                    android:layout_toEndOf="@+id/tv_adresse"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/et_adresse"
                    style="@style/et_normal"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:id="@+id/rl_adresse_complete"
                android:orientation="horizontal"
                style="@style/rl_marge">
            <TextView
                    android:id="@+id/tv_cp"
                    android:text="@string/cp"
                    style="@style/tv_libelle_centre"/>
            <EditText
                    android:layout_toEndOf="@+id/tv_cp"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/et_cp"
                    style="@style/et_normal"/>
            <TextView
                    android:id="@+id/tv_ville"
                    android:text="@string/ville"
                    android:layout_toEndOf="@+id/et_cp"
                    android:layout_alignParentLeft="false"
                    style="@style/tv_libelle_centre"/>
            <EditText
                    android:layout_toEndOf="@+id/tv_ville"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/et_ville"
                    style="@style/et_normal"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>